Slight whitespace fix for member group of SplitTaxon.

--- a/app/assets/stylesheets/shared/activity_item.css.scss
+++ b/app/assets/stylesheets/shared/activity_item.css.scss
@@ -144,7 +144,7 @@ body > div > [role="dialog"] .ActivityItem {
         line-height: 25px;
       }
       .member-group {
-        display: inline;
+        display: table;
         .taxon {
           display: inline;
         }
